@@ -7,9 +7,14 @@ Change Log:
 
 2.7 - 9/20/2012 - Aaron Edwards
 ----------------------------------------------------------------------
-- Include shopping cart item details in orders csv exports
+- Include shopping cart item details in orders CSV exports
+- fix special instructions in CSV order exports
 - Add special instructions to admin new order notification
+- Support ecommerce tracking with our Google Analytics plugin on multisite
 - Urlencode paypal url fields to support utf8 store slugs
+- Fix an error and debug code in PayPal Express gateway
+- Fix custom message showing in cart widget when empty: http://premium.wpmudev.org/forums/topic/shopping-cart-page-message-repeating-in-shopping-cart-widget
+- Fix hooks for Affiliate plugin integration with Manual Payments gateway. Props @Rystraum!
 - iDeal gateway bugfixes
 
 2.6.4 - 9/04/2012 - Aaron Edwards
